GH-58: fix background stretching issue for web app

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -15,6 +15,7 @@
 .App {
   display: flex;
   flex-direction: column;
+  min-width: 1440px;
   min-height: 720px;
   height: 100vh;
 }
